--- a/blog_page/page.css
+++ b/blog_page/page.css
@@ -43,9 +43,13 @@ table {
 }
 body{
 	font-family: 'Open Sans', sans-serif;
+	font-size: 13px;
 }
 a:hover{
 	text-decoration: none !important;
+}
+i{
+	color: #fff;
 }
 /*header*/
 /*header-logo*/
@@ -62,7 +66,7 @@ a:hover{
 	width: 100%;
 	height: 100%;
 }
-.header__menu ul li{
+.header__menu ul a{
 	float: left;
 	width: 16%;
 	height: 100%;
@@ -71,17 +75,24 @@ a:hover{
     justify-content: center;
 
 }
-.header__menu ul li a{
+.header__menu ul a li{
 	color: #6f7379;
 	text-decoration: none;
 	font-weight: bold;
+	font-size: 15px;
 }
-.header__menu ul li:hover{
+.header__menu ul a:hover{
 	color: #44c0c2;
-	background-color: #f8f9fb;
 	border-bottom: 3px solid #44c0c2;
 }
-.header__menu ul li:hover a{
+.header__menu ul a:focus{
+	color: #44c0c2;
+	border-bottom: 3px solid #44c0c2;
+}
+.header__menu ul a:hover li{
+	color: #44c0c2;
+}
+.header__menu ul a:focus li{
 	color: #44c0c2;
 }
 /*banner*/
@@ -164,7 +175,7 @@ a:hover{
 .post__info{
 	border-top: 1px solid #e9e9e9;
 	border-bottom: 1px solid #e9e9e9;
-	margin-top: 20px;
+	margin-top: 40px;
 	height: 40px;
 	display: flex;
 	align-items: center;
@@ -195,15 +206,32 @@ a:hover{
 	border-right: none !important;
 	border-left: none !important;
 }
-.form-control:focus{
-	border: none !important;
-}
 .btn-search, .input--no-border{
 	border: none !important;	
 	border-top: 1px solid #ced4da !important;
 	border-bottom: 1px solid #ced4da !important;
 } 
+.btn-search:hover{
+	background-color: #fff !important;
+}
+.form-control:focus{
+	box-shadow: none !important;
+}
+.btn:focus{
+	box-shadow: none !important;
+}
+
 /*follow us*/
+.icon-group a{
+	height: 42px;
+	width: 42px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.icon-group a i{
+	font-size: 22px;
+}
 .btn-group__item{
 	margin-right: 20px;
 	width: 38px;
@@ -236,10 +264,14 @@ a:hover{
 	padding: 10px 0;
 
 }
-.fa-chevron-right{
+.categories .fa-chevron-right{
 	color: #44c0c2;
 	margin-right: 10px;
 	font-size: 80%;
+}
+.categories .list-group-item{
+	color: #000;
+	height: 100%;
 }
 .categories .list-group-item:hover{
 	background-color: #485460;
@@ -247,14 +279,28 @@ a:hover{
 	color: #fff;
 }
 .categories .list-group-item:hover i{
+	color: #fff;
+	margin-left: 15px;
+}
+.categories ul a:focus li{
+	background-color: #485460;
+	border-radius: 4px;
+	color: #fff;
+}
+.categories ul a:focus i{
 	margin-left: 10px;
 	color: #fff;
+	background-color: #485460;
 }
 /*popular post*/
 .popular--date{
 	display: flex;
 	justify-content: space-between;
 }
+.popular-post__content{
+	margin-top: 20px;
+}
+/*recent post*/
 .recent-post__item{
 	height: 40px;
     line-height: 40px;
@@ -283,4 +329,54 @@ a:hover{
 	color: #fff;
 	border-radius: 3px;
 	text-decoration: none;
+}
+.tags div a:focus{
+	background-color: #44c0c2;
+	color: #fff;
+	border-radius: 3px;
+	text-decoration: none;
+}
+/*pagination*/
+.paginate {
+	margin-top: 90px;
+}
+.page-item{
+	width: 10%;
+}
+.page-item a{
+	color: #6f7379;
+	width: 100%;
+	font-size: 24px;
+}
+.page-item a i{
+	color: #6f7379;
+}
+.page-item a:focus{
+	border-radius: 50%;
+	background-color: #485460;
+	color: #fff;
+}
+.page-item:hover a{
+	color: #000;
+	background-color: #fff;
+}
+.page-item:first-child{
+	margin-right: 50px;
+}
+.page-item:last-child{
+	margin-left: 50px;
+}
+.page-link{
+	height: 56px;
+}
+/*footer*/
+footer{
+	margin-top: 40px;
+}
+footer div{
+	padding-top: 40px;
+}
+footer p{
+	margin-top: 20px;
+	padding-bottom: 40px;
 }
